fixed die-box overlapping header

--- a/src/Snake/snake.css
+++ b/src/Snake/snake.css
@@ -7,18 +7,22 @@
 }
 
 .modal-bg {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgb(0, 0, 0, 0.5);
-  z-index: 1;
 }
 
 .modal {
+  z-index: 1;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
   background-color: white;
-  padding: 1rem;
-  z-index: 0;
-  transition: var(--tr);
+  border: 3px solid red;
 }
